# onedrive-sync-anywhere

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  Titlebar.css  index.css  main.tsx
src-photoshop/: icon.psd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: Description.css  Description.tsx  FileSelector.css  FileSelector.tsx  FileText.tsx  LinkType.css  LinkType.tsx  Titlebar.css  Titlebar.tsx
